# users

./: Cargo.toml
src/: cli.rs  command.rs  crash.rs  data.rs  lib.rs  main.rs  user.rs
src/command/: data.rs  write.rs
user_registry_cli/: Cargo.toml
user_registry_cli/src/: app.rs  lib.rs  main.rs
user_registry_gui/: Cargo.toml
user_registry_gui/src/: app.rs  error.rs  lib.rs  main.rs  message.rs  page.rs  state.rs
user_registry_gui/src/pages/: main.rs
user_registry_lib/: Cargo.toml
user_registry_lib/src/: command.rs  data.rs  lib.rs
user_registry_lib/src/command/: data.rs  error.rs  write.rs
